kubernetes/apps/longhorn-system/longhorn/app/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ui
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`longhorn.toskbot.xyz`)
      kind: Rule
      services:
        - name: longhorn-frontend
          namespace: longhorn-system
          port: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-external-dns
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: longhorn.toskbot.xyz
